# parser_postgres

./: pyproject.toml
parser/: config.ini  connect.py  models.py
parser/db_scr/: json_files.py
parser/json_files/: authors.json
